--- a/08 - Pandas Foundation/Pandas Foundation.ipynb
+++ b/08 - Pandas Foundation/Pandas Foundation.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Course(8) - pandas Foundations\n",
+    "# Anka is adding some stuff here\n",
+    "##  fsjfksjfks fj\n",
     "\n",
     "## Chapter(1) -  Data ingestion & inspection\n",
     "\n",
@@ -2938,7 +2940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
