changed first markdown cell of pandas foundations

--- a/08 - Pandas Foundation/Pandas Foundation.ipynb
+++ b/08 - Pandas Foundation/Pandas Foundation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Course(8) - pandas Foundations\n",
     "# Anka is adding some stuff here\n",
-    "##  fsjfksjfks fj\n",
+    "##  JupyterLab\n",
     "\n",
     "## Chapter(1) -  Data ingestion & inspection\n",
     "\n",
@@ -2944,5 +2944,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
